[package]
name = "voxel-tycoon-modding-helpers"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
hex = "0.4.3"
image = "0.25.5"
imageproc = "0.25.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"


[[bin]]
name = "vt-utils"
path = "src/main.rs"
